--- a/src/app/Employee/Employee.component.html
+++ b/src/app/Employee/Employee.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="col-lg-12 well">
-        <h1 class=" col-lg-6">Please Sign up here </h1>
-        <div class="col-lg-6">
+        <h1>Please Add Employees here.. </h1>
+        <!--<div class="col-lg-6">
             <h1>Already Have Account.. <a href="">Sign In</a>
             </h1>
-        </div>
+        </div>-->
     </div>
     <div class="col-lg-12 well">
         <div class="row">
