--- a/src/app/Employee/Employee.component.html
+++ b/src/app/Employee/Employee.component.html
@@ -1,10 +1,6 @@
 <div class="container">
     <div class="col-lg-12 well">
         <h1>Please Add Employees here.. </h1>
-        <!--<div class="col-lg-6">
-            <h1>Already Have Account.. <a href="">Sign In</a>
-            </h1>
-        </div>-->
     </div>
     <div class="col-lg-12 well">
         <div class="row">
@@ -27,7 +23,7 @@
                         </div>
                         <div class="col-sm-6 form-group">
                             <label> Title </label>
-                            <input type="text" placeholder="Enter Title ID.." class="form-control" required>
+                            <input type="text" placeholder="Enter Title.." class="form-control" required>
                         </div>
                     </div>
                     <div class="row">
@@ -41,10 +37,47 @@
                         </div>
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-lg btn-info">submit</button>
+                        <button type="submit" class="btn btn-lg btn-info" (click)="emp_Added()">submit</button>
                     </div>
                 </div>
             </form>
+        </div>
+    </div>
+    <div class="col-lg-12 well">
+
+        <div class="table-responsive" *ngIf="employees && employees.length">
+            <table class="table" *ngIf="employees && employees.length">
+                <thead>
+                    <tr>
+                        <th>
+                            First Name
+                        </th>
+                        <th>
+                            Last Name
+                        </th>
+                        <th>
+                            Employee ID
+                        </th>
+                        <th>
+                            Title
+                        </th>
+                        <th>
+                            Domain
+                        </th>
+                        <th>
+                            Email Address
+                        </th>
+                    </tr>
+                </thead>
+                <tr *ngFor="let employee of employees">
+                    <td>{{employee.FirstName | uppercase}}</td>
+                    <td>{{employee.LastName | uppercase}}</td>
+                    <td>{{employee.EmployeeID }}</td>
+                    <td>{{employee.Title }}</td>
+                    <td>{{employee.Domain}}</td>
+                    <td>{{employee.Email_Address}}</td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
